--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
   <head>
     <title>Sample</title>
     <link rel="stylesheet" href="./style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    />
   </head>
   <body>
     <div class="container">
@@ -22,6 +26,8 @@
       </div>
       <div class="header-profile">
         <div class="content-left w-full">
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-instagram"></i>
           <div class="profile-image">
             <img src="https://via.placeholder.com/1920x1200" />
           </div>
